@@ -16,6 +16,7 @@ Agregada carga de Tabla de Símbolos para mejorar la depuración
 Permitir grabar pantalla a bmp para la mayoría de máquinas
 Permitir hotswap a Pentagon y a Spectrum +3
 Permitir hotswap desde Spectrum 128 a Spectrum +3
+Permitir cargar snapshots .SP de 64kb (como Shadow of Unicorn)
 Mejorar aviso de Azimuth en ventana External Audio Source
 Agregado modo Flash Color
 Permitir no guardar snapshot al salir de ZEsarUX
